--- a/django_weather_project/.gitignore
+++ b/django_weather_project/.gitignore
@@ -6,6 +6,14 @@ __pycache__
 db.sqlite3
 media
 
+#API Keys
+api_key.txt
+API_KEY
+API_KEY.txt
+/API_KEY
+/API_KEY.txt
+.API_KEY
+
 # Backup files # 
 *.bak 
 
